# Sparker_Engine

./: CMakeLists.txt  main.cpp
Renderer/: RendererCore.cpp  RendererCore.h
Renderer/Utils/: Utils.cpp  Utils.h  utils.cpp  utils.h
renderer/: CMakeLists.txt  SpRendererConfig.h.in
renderer/include/SpRenderer/: QueueFamily.h  RendererCore.h  Shader.h  Utils.h
renderer/resources/: testText.txt
renderer/src/: CMakeLists.txt
renderer/src/core/: RendererCore.cpp
renderer/src/core/shaders/: Shader.cpp
renderer/src/core/utils/: Utils.cpp  Vertex.cpp
src/: config.h.in
src/Renderer/: QueueFamily.cpp  QueueFamily.h  RendererCore.cpp  RendererCore.h
src/Renderer/Shaders/: Shader.cpp  Shader.h
src/Renderer/Utils/: Utils.cpp  Utils.h  Vertex.h
src/Resources/Shaders/: Vertex2D Base.vert
